<resources>
    <string name="app_name">TechTrack</string>
    <string name="loading">Loading.....</string>
    <string name="e_comm">E Comm</string>
    <string name="log_in">Log-in</string>
    <string name="email">Email</string>
    <string name="enter_your_email_here">Enter your Email here</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LogIn</string>
    <string name="do_not_hava_an_account">Do not have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">Or Login with</string>
    <string name="loginwithemail">LoginWithEmail</string>
    <string name="sign_up_b">Sign-up</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="your_contact_number">Your Contact Number</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="logout">Logout</string>
    <string name="send_mail">Send Mail</string>
    <string name="reset_password">Reset Password</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="lets_start_learning_in_new_way">Let\'s start learning \n in a new way</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="courses">Courses</string>
    <string name="dbms_os">DBMS,OS,..</string>
    <string name="notes">Notes</string>
    <string name="view">View</string>
    <string name="operating_system_os">Operating System (OS)</string>
    <string name="os">OS</string>
    <string name="operating_system">Operating System</string>
    <string name="dbms">DBMS</string>
    // course Title
    <string name="course_os">Operating System</string>
    <string name="course_dbms">Database Management System</string>
    <string name="course_web">Web Development</string>
    <string name="course_android">Android Development</string>
    <string name="course_dsa">Data Structures and Algorithms</string>
    // course Tagline
    <string name="tag_os">Learn OS the smart way!</string>
    <string name="tag_dbms">Learn DBMS the smart way!</string>
    <string name="tag_web">Learn Web Development the smart way!</string>
    <string name="tag_android">Learn Android Development the smart way!</string>
    <string name="tag_dsa">Learn DSA the smart way!</string>
    // course Footer
    <string name="foot_os">Start small, dream big – OS is just the beginning!</string>
    <string name="foot_dbms">Start small, dream big – DBMS is just the beginning!</string>
    <string name="foot_web">Start small, dream big – Web Development is just the beginning!</string>
    <string name="foot_android">Start small, dream big – Android Development is just the beginning!</string>
    <string name="foot_dsa">Start small, dream big – DSA is just the beginning!</string>
</resources>